# librick-and-morty

./: .gitignore  CMakeLists.txt  README.md  api.c  character.c  episode.c  episode.h  location.c  types.h  utils.c  utils.h
Documentation/html/: annotated.html  annotated_dup.js  api_8h_source.html  character_8h.html  character_8h.js  character_8h_source.html  classes.html  episode_8h.html  episode_8h.js  episode_8h_source.html  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_func.html  index.html  location_8h.html  location_8h.js  location_8h_source.html  md__r_e_a_d_m_e.html  menudata.js  navtreedata.js  navtreeindex0.js  pages.html  struct_info.html  struct_mem.html  struct_r_m__character.html  struct_r_m__character.js  struct_r_m__character__array.html  struct_r_m__character__array.js  struct_r_m__dict.html  struct_r_m__dict.js  struct_r_m__episode.html  struct_r_m__episode.js  struct_r_m__episode__array.html  struct_r_m__episode__array.js  struct_r_m__location.html  struct_r_m__location.js  struct_r_m__location__array.html  (+3 more)
Documentation/html/search/: all_3.js  all_5.js  all_6.js  classes_1.js  files_2.js  functions_0.js  searchdata.js  variables_0.js  variables_3.js  variables_7.js  variables_9.js  variables_b.js  variables_c.js
Documentation/man/man3/: Info.3  Mem.3  RM_character.3  RM_character_array.3  RM_dict.3  RM_episode.3  RM_episode_array.3  RM_location.3  RM_location_array.3  character.h.3  episode.h.3  location.h.3  md__r_e_a_d_m_e.3
rm/: CMakeLists.txt  api.c  api.h  character.c  character.h  episode.c  episode.h  example_character_get_all_with_filter.c  example_episode_get_list.c  example_location_get_page_no_fiter.c  location.c  location.h  types.h  utils.c  utils.h
rm/Documentation/html/: annotated.html  api_8h_source.html  character_8h.html  classes.html  episode_8h.html  files.html  functions_vars.html  md__r_e_a_d_m_e.html  struct_mem.html  struct_r_m__character__array.html  struct_r_m__dict.html  struct_r_m__episode.html  struct_r_m__episode__array.html  struct_r_m__location__array.html  utils_8h_source.html
rm/Documentation/html/search/: all_1.js  all_4.js  all_a.js  all_b.js  classes_0.js  classes_2.js  files_1.js  pages_0.js  variables_1.js  variables_2.js  variables_5.js  variables_6.js  variables_8.js
rm/Documentation/man/man3/: Mem.3  RM_character.3  RM_character_array.3  character.h.3  episode.h.3
